# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.hpp  hittables.hpp  light.hpp  materials.hpp  ray.hpp  record.hpp  vector3.hpp
src/: camera.cpp  hittables.cpp  light.cpp  materials.cpp  vector3.cpp
